[project]
name = "claude-live"
version = "0.1.0"
description = "Real-time web viewer for Claude Code session transcripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Carlos" }]
keywords = ["claude", "claude-code", "transcript", "viewer", "live"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]

[project.scripts]
claude-live = "claude_live:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
